fix margin wraper

--- a/apps/bmxacademy/static/bmxacademy/css/screen.css
+++ b/apps/bmxacademy/static/bmxacademy/css/screen.css
@@ -306,7 +306,7 @@ background-image: url(../images/info.png);
     position: relative;
     margin: 0 auto ;
     margin-top: 400px;
-    margin-bottom: 800px;
+    margin-bottom: 500px;
 }
 
 
